<resources>
    <string name="app_name">project academy</string>

    <!--Fragment movie details-->
    <string name="title_activity_movie_details">Movie details</string>
    <string name="button_show_movie_details">Show movie details</string>
    <string name="button_back">Back</string>
    <string name="title_storyline">Storyline</string>
    <string name="title_cast">Cast</string>
    <string name="text_storyline_example">After the devastating events of Avengers: Infinity War,
        the universe is in ruins. With the help of remaining allies, the Avengers assemble once
        more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="minimum_age_example">13+</string>
    <string name="movie_name">Avengers:\nEnd Game</string>
    <string name="movie_name_without_ln">Avengers: End Game</string>
    <string name="movie_tag_example">Action, Adventure, Fantasy</string>
    <string name="movie_review_example">125 Reviews</string>
    <string name="event_add_to_calendar">Event added to the calendar</string>

    <!--Fragment movies list-->
    <string name="title_movies_list">Movies list</string>
    <string name="movie_time_example">137 min</string>
    <string name="title_release_date">Release date:</string>

    <string name="movie_transition_name">movie_transition</string>

    <!--Permissions-->
    <string name="permission_read_calendar_granted_text">READ CALENDAR permission granted</string>
    <string name="permission_read_calendar_dialog_explanation_text">To continue please grant access to read calendar</string>
    <string name="permission_read_calendar_dialog_denied_text">This feature is not available without read calendar permissions. Open app settings?</string>
    <string name="permission_read_write_calendar_not_granted_text">Read and write calendar permissions not granted</string>
    <string name="permission_write_calendar_granted_text">WRITE CALENDAR permission granted</string>
    <string name="permission_write_calendar_dialog_explanation_text">To continue please grant access to write calendar</string>
    <string name="permission_write_calendar_dialog_denied_text">This feature is not available without write calendar permissions. Open app settings?</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="permissions_title_calendar">Calendar permission</string>
    <string name="permission_message_calendar"><![CDATA[Read & write calendar permissions are needed for planning a movie watch]]></string>

</resources>